--- a/FirstStepsInObjectProgrammingInCHash.csproj
+++ b/FirstStepsInObjectProgrammingInCHash.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="PropertiesConstructor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticPerson.cs" />
   </ItemGroup>
